# PI-format

./: CMakeLists.txt  FINAL_SUMMARY.md  LICENSE  Makefile  PIX_ENGINE_STATUS_REPORT.md  README.md  README_v40.md  README_v7_honest.md  demo.cpp  inspector.cpp  pi_format.py  pix_demo_final.cpp  pix_demo_simple.cpp  pix_engine_complete  pix_engine_complete.cpp  pix_engine_final  pix_engine_final.cpp  pix_engine_improved.cpp  pix_engine_production.cpp  pix_engine_production_standalone.cpp  pix_engine_simple  pix_engine_simple.cpp  pix_engine_standalone  pix_engine_standalone.cpp  pix_engine_ultimate  pix_engine_ultimate.cpp  pix_engine_ultimate_v10.cpp  pix_engine_ultimate_v10.hpp  pix_engine_v40.cpp  pix_engine_v40_simple.cpp  pix_engine_v7_simple  pix_engine_v9  pix_engine_v9_complete.cpp  pix_engine_with_tests  pix_v24.cpp  pix_v26.cpp  pix_v30.cpp  pix_v4.2.hpp
.GitHub/workflows/: ci.yml
.github/workflows/: c-cpp.yml
examples/: CMakeLists.txt  demo.cpp  inspector.cpp
include/pi/: pi.hpp
tests/: CMakeLists.txt  main_test.cpp
